[gd_scene load_steps=7 format=3 uid="uid://crqa5e35ex10t"]

[ext_resource type="Script" path="res://Scripts/Elevator.gd" id="1_brphi"]
[ext_resource type="Script" path="res://Scripts/Elevator_Area.gd" id="1_wgjke"]
[ext_resource type="TileSet" uid="uid://c4v2bl2oih1w8" path="res://Assets/Light_Tileset_no_collision.tres" id="2_6i0dy"]
[ext_resource type="AnimationLibrary" uid="uid://8v76ngbmt6i3" path="res://Assets/Elevator_Animations.res" id="4_1c57d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qo1sk"]
size = Vector2(22, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyqub"]
size = Vector2(48, 6)

[node name="White_Elevator" type="Node2D"]
script = ExtResource("1_brphi")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
position = Vector2(0, 80)

[node name="Elevator_Area" type="Area2D" parent="AnimatableBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_wgjke")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Elevator_Area"]
position = Vector2(24, -12)
shape = SubResource("RectangleShape2D_qo1sk")

[node name="Elevator_Base" type="TileMap" parent="AnimatableBody2D"]
tile_set = ExtResource("2_6i0dy")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262144, 2, 1, 327680, 2, 2, 393216, 2, -65536, 262144, 1, -65534, 393216, 1, -65535, 327680, 1, -131071, 327680, 0, -196607, 262144, 0, -262143, 262144, 0, -327679, 262144, 0, -393215, 262144, 0, -458751, 262144, 0, -524287, 262144, 0, -589823, 262144, 0, -655359, 262144, 0, -720895, 262144, 0, -786431, 262144, 0, -851967, 262144, 0, -917503, 262144, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
position = Vector2(24, 3)
shape = SubResource("RectangleShape2D_lyqub")

[node name="Elevator_Animation" type="AnimationPlayer" parent="AnimatableBody2D"]
libraries = {
"": ExtResource("4_1c57d")
}

[connection signal="body_entered" from="AnimatableBody2D/Elevator_Area" to="AnimatableBody2D/Elevator_Area" method="_on_body_entered"]
[connection signal="body_exited" from="AnimatableBody2D/Elevator_Area" to="AnimatableBody2D/Elevator_Area" method="_on_body_exited"]
